# pixelart-level-generator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: backlog.md
docs/superpowers/plans/: 2026-03-29-pixelart-map-package.md
docs/superpowers/specs/: 2026-03-29-map-generator-design.md
pixelart_map/: __init__.py  _claude.py  _filename.py  _ollama.py  _theme.py  analyzer.py  browser.py  catalog.py  renderer.py  web.py
tests/: conftest.py  test_analyzer.py  test_browser.py  test_catalog.py  test_claude.py  test_filename.py  test_integration.py  test_ollama.py  test_renderer.py  test_theme.py  test_validation.py  test_web.py
tests/fixtures/: sample_catalog.json
